@@ -28,7 +28,6 @@ package org.niis.xroad.ss.test.addons;
 
 import ee.ria.xroad.common.util.MimeTypes;
 
-import com.nortal.test.core.services.TestableApplicationInfoProvider;
 import feign.Contract;
 import feign.Feign;
 import feign.Logger;
@@ -38,19 +37,18 @@ import feign.hc5.ApacheHttp5Client;
 import feign.jackson.JacksonEncoder;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.hc.client5.http.impl.classic.HttpClients;
+import org.niis.xroad.common.test.api.interceptor.TestCaFeignInterceptor;
 import org.niis.xroad.ss.test.addons.api.FeignHealthcheckApi;
 import org.niis.xroad.ss.test.addons.api.FeignXRoadRestRequestsApi;
 import org.niis.xroad.ss.test.addons.api.FeignXRoadSoapRequestsApi;
 import org.niis.xroad.ss.test.addons.jmx.JmxClient;
 import org.niis.xroad.ss.test.addons.jmx.JmxClientImpl;
+import org.niis.xroad.ss.test.ui.container.EnvSetup;
 import org.niis.xroad.ss.test.ui.container.Port;
 import org.springframework.cloud.openfeign.FeignClientsConfiguration;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
-
-import static org.niis.xroad.ss.test.ui.container.ContainerSetup.JMX_PORT_SUPPLIER;
-import static org.niis.xroad.ss.test.ui.container.Port.HEALTHCHECK;
 
 @Slf4j
 @Configuration
@@ -61,14 +59,19 @@ public class SsAddonTestConfiguration {
 
     @Bean
     public FeignXRoadSoapRequestsApi feignManagementRequestsApi(
-            Decoder decoder, TestableApplicationInfoProvider appInfoProvider, Contract contract) {
+            Decoder decoder,
+            EnvSetup envSetup,
+            Contract contract) {
         return Feign.builder()
                 .logLevel(Logger.Level.FULL)
                 .client(new ApacheHttp5Client(HttpClients.createDefault()))
                 .encoder(new Encoder.Default())
                 .decoder(decoder)
                 .requestInterceptor(requestTemplate -> requestTemplate
-                        .target(String.format("http://%s:%s", appInfoProvider.getHost(), appInfoProvider.getMappedPort(Port.SERVICE)))
+                        .target(String.format("http://%s:%s".formatted(
+                                envSetup.getContainerMapping(EnvSetup.PROXY, Port.PROXY_HTTP).host(),
+                                envSetup.getContainerMapping(EnvSetup.PROXY, Port.PROXY_HTTP).port()
+                        )))
                         .header("Content-Type", MimeTypes.TEXT_XML_UTF8)
                         .header("x-hash-algorithm", "SHA-512")
                 )
@@ -77,7 +80,8 @@ public class SsAddonTestConfiguration {
     }
 
     @Bean
-    public FeignXRoadRestRequestsApi feignXRoadRestRequestsApi(Decoder decoder, TestableApplicationInfoProvider appInfoProvider,
+    public FeignXRoadRestRequestsApi feignXRoadRestRequestsApi(Decoder decoder,
+                                                               EnvSetup envSetup,
                                                                Contract contract) {
         return Feign.builder()
                 .logLevel(Logger.Level.FULL)
@@ -85,8 +89,10 @@ public class SsAddonTestConfiguration {
                 .encoder(new JacksonEncoder())
                 .decoder(decoder)
                 .requestInterceptor(requestTemplate -> {
-                    requestTemplate.target(String.format("http://%s:%s", appInfoProvider.getHost(),
-                            appInfoProvider.getMappedPort(Port.SERVICE)));
+                    requestTemplate.target("http://%s:%s".formatted(
+                            envSetup.getContainerMapping(EnvSetup.PROXY, Port.PROXY_HTTP).host(),
+                            envSetup.getContainerMapping(EnvSetup.PROXY, Port.PROXY_HTTP).port()
+                    ));
                     requestTemplate.header("Content-Type", MimeTypes.JSON);
                 })
                 .contract(contract)
@@ -96,21 +102,30 @@ public class SsAddonTestConfiguration {
     @Bean
     @SuppressWarnings("checkstyle:MagicNumber")
     public FeignHealthcheckApi feignHealthcheckApi(
-            Decoder decoder, TestableApplicationInfoProvider appInfoProvider, Contract contract) {
+            Decoder decoder,
+            EnvSetup envSetup,
+            Contract contract) {
         return Feign.builder()
                 .logLevel(Logger.Level.FULL)
                 .client(new ApacheHttp5Client(HttpClients.createDefault()))
                 .encoder(new Encoder.Default())
                 .decoder(decoder)
                 .requestInterceptor(requestTemplate -> requestTemplate
-                        .target(String.format("http://%s:%s", appInfoProvider.getHost(), appInfoProvider.getMappedPort(HEALTHCHECK))))
+                        .target("http://%s:%d".formatted(
+                                envSetup.getContainerMapping(EnvSetup.PROXY, Port.PROXY_HEALTHCHECK).host(),
+                                envSetup.getContainerMapping(EnvSetup.PROXY, Port.PROXY_HEALTHCHECK).port())))
                 .contract(contract)
                 .target(FeignHealthcheckApi.class, "http://localhost");
     }
 
     @Bean
-    public JmxClient jmxClient(TestableApplicationInfoProvider appInfoProvider) {
-        return new JmxClientImpl(() -> String.format(JMX_URL_TEMPLATE, appInfoProvider.getHost(), JMX_PORT_SUPPLIER.get()));
+    public JmxClient jmxClient() {
+        return new JmxClientImpl(() -> String.format(JMX_URL_TEMPLATE, "localhost", Port.MONITOR_JMX.get()));
+    }
+
+    @Bean
+    TestCaFeignInterceptor testCaFeignInterceptor(EnvSetup envSetup) {
+        return new TestCaFeignInterceptor(() -> envSetup.getContainerMapping(EnvSetup.TESTCA, Port.TEST_CA).port());
     }
 
 }
